...
                  },
                ),
              ),
              MyTimer20(),
              Text(
                'Your verification code detect automatically\n   if not please enter manually',
                key: Key('Verification Text'),
                textAlign: TextAlign.center,
                style: TextStyle(color: Colors.black45),
              ),
              Container(
                height: 150,
                child: FlareActor(
...
